scripts/build.log
Compilation started at Tue Apr 29 11:52:27 EDT 2025
../src/interperter.cpp:16:6: error: ‘Interperter’ has not been declared
   16 | void Interperter::setupOutputFile()
      |      ^~~~~~~~~~~
../src/interperter.cpp: In function ‘void setupOutputFile()’:
../src/interperter.cpp:27:5: error: ‘outputFile’ was not declared in this scope
   27 |     outputFile.open(filename);
      |     ^~~~~~~~~~
../src/interperter.cpp: At global scope:
../src/interperter.cpp:35:6: error: ‘Interperter’ has not been declared
   35 | void Interperter::execute()
      |      ^~~~~~~~~~~
../src/interperter.cpp: In function ‘void execute()’:
../src/interperter.cpp:39:23: error: ‘root’ was not declared in this scope
   39 |     for (auto &stmt : root->SUB_STATEMENTS)
      |                       ^~~~
../src/interperter.cpp:53:5: error: ‘executeNode’ was not declared in this scope; did you mean ‘execute’?
   53 |     executeNode(beginBlock);
      |     ^~~~~~~~~~~
      |     execute
../src/interperter.cpp: At global scope:
../src/interperter.cpp:56:7: error: ‘Interperter’ has not been declared
   56 | Value Interperter::evaluateExpression(AST_NODE *node)
      |       ^~~~~~~~~~~
../src/interperter.cpp: In function ‘Value evaluateExpression(AST_NODE*)’:
../src/interperter.cpp:169:13: error: ‘variables’ was not declared in this scope
  169 |         if (variables.find(node->VALUE) != variables.end())
      |             ^~~~~~~~~
../src/interperter.cpp:193:13: error: ‘variables’ was not declared in this scope
  193 |         if (variables.find(varName) == variables.end())
      |             ^~~~~~~~~
../src/interperter.cpp:199:24: error: ‘variables’ was not declared in this scope
  199 |         Value &value = variables[varName];
      |                        ^~~~~~~~~
../src/interperter.cpp: At global scope:
../src/interperter.cpp:233:6: error: ‘Interperter’ has not been declared
  233 | void Interperter::executeStatement(AST_NODE *node)
      |      ^~~~~~~~~~~
../src/interperter.cpp: In function ‘void executeStatement(AST_NODE*)’:
../src/interperter.cpp:252:13: error: ‘variables’ was not declared in this scope
  252 |             variables[node->VALUE] = value;
      |             ^~~~~~~~~
../src/interperter.cpp:256:13: error: ‘variables’ was not declared in this scope
  256 |             variables[node->VALUE] = Value(0);
      |             ^~~~~~~~~
../src/interperter.cpp:263:13: error: ‘variables’ was not declared in this scope
  263 |             variables[node->VALUE] = value;
      |             ^~~~~~~~~
../src/interperter.cpp:267:13: error: ‘variables’ was not declared in this scope
  267 |             variables[node->VALUE] = Value(false);
      |             ^~~~~~~~~
../src/interperter.cpp:274:13: error: ‘variables’ was not declared in this scope
  274 |             variables[node->VALUE] = value;
      |             ^~~~~~~~~
../src/interperter.cpp:278:13: error: ‘variables’ was not declared in this scope
  278 |             variables[node->VALUE] = Value(0.0);
      |             ^~~~~~~~~
../src/interperter.cpp:285:13: error: ‘variables’ was not declared in this scope
  285 |             variables[node->VALUE] = value;
      |             ^~~~~~~~~
../src/interperter.cpp:289:13: error: ‘variables’ was not declared in this scope
  289 |             variables[node->VALUE] = Value("");
      |             ^~~~~~~~~
../src/interperter.cpp:296:13: error: ‘printToOutput’ was not declared in this scope
  296 |             printToOutput(result);
      |             ^~~~~~~~~~~~~
../src/interperter.cpp: At global scope:
../src/interperter.cpp:311:6: error: ‘Interperter’ has not been declared
  311 | void Interperter::executeNode(AST_NODE *node)
      |      ^~~~~~~~~~~
../src/interperter.cpp: In function ‘void executeNode(AST_NODE*)’:
../src/interperter.cpp:370:13: error: ‘variables’ was not declared in this scope
  370 |             variables[node->VALUE] = value;
      |             ^~~~~~~~~
../src/interperter.cpp:374:13: error: ‘variables’ was not declared in this scope
  374 |             variables[node->VALUE] = Value(false);
      |             ^~~~~~~~~
../src/interperter.cpp:381:13: error: ‘variables’ was not declared in this scope
  381 |             variables[node->VALUE] = value;
      |             ^~~~~~~~~
../src/interperter.cpp:385:13: error: ‘variables’ was not declared in this scope
  385 |             variables[node->VALUE] = Value(0);
      |             ^~~~~~~~~
../src/interperter.cpp:392:13: error: ‘variables’ was not declared in this scope
  392 |             variables[node->VALUE] = value;
      |             ^~~~~~~~~
../src/interperter.cpp:396:13: error: ‘variables’ was not declared in this scope
  396 |             variables[node->VALUE] = Value(0.0);
      |             ^~~~~~~~~
../src/interperter.cpp:403:13: error: ‘variables’ was not declared in this scope
  403 |             variables[node->VALUE] = value;
      |             ^~~~~~~~~
../src/interperter.cpp:407:13: error: ‘variables’ was not declared in this scope
  407 |             variables[node->VALUE] = Value('\0');
      |             ^~~~~~~~~
../src/interperter.cpp:414:13: error: ‘variables’ was not declared in this scope
  414 |             variables[node->VALUE] = value;
      |             ^~~~~~~~~
../src/interperter.cpp:418:13: error: ‘variables’ was not declared in this scope
  418 |             variables[node->VALUE] = Value("");
      |             ^~~~~~~~~
../src/interperter.cpp:439:13: error: ‘variables’ was not declared in this scope
  439 |         if (variables.find(varName) == variables.end())
      |             ^~~~~~~~~
../src/interperter.cpp:459:17: error: ‘variables’ was not declared in this scope
  459 |             if (variables.find(node->VALUE) == variables.end())
      |                 ^~~~~~~~~
../src/interperter.cpp:465:13: error: ‘variables’ was not declared in this scope
  465 |             variables[varName] = result;
      |             ^~~~~~~~~
../src/interperter.cpp:470:17: error: ‘variables’ was not declared in this scope
  470 |             if (variables.find(varName) == variables.end())
      |                 ^~~~~~~~~
../src/interperter.cpp:481:13: error: ‘outputFile’ was not declared in this scope
  481 |         if (outputFile.is_open())
      |             ^~~~~~~~~~
../src/interperter.cpp:490:13: error: ‘printToOutput’ was not declared in this scope
  490 |             printToOutput(result);
      |             ^~~~~~~~~~~~~
../src/interperter.cpp:597:29: error: ‘findFunctionByName’ was not declared in this scope
  597 |         AST_NODE *funcDef = findFunctionByName(funcName);
      |                             ^~~~~~~~~~~~~~~~~~
../src/interperter.cpp:605:51: error: ‘variables’ was not declared in this scope
  605 |         std::map<std::string, Value> localScope = variables; // Save current variables
      |                                                   ^~~~~~~~~
../src/interperter.cpp:649:13: error: ‘outputFile’ was not declared in this scope
  649 |         if (outputFile.is_open())
      |             ^~~~~~~~~~
../src/interperter.cpp: At global scope:
../src/interperter.cpp:663:11: error: ‘Interperter’ has not been declared
  663 | AST_NODE *Interperter::findFunctionByName(const std::string &name)
      |           ^~~~~~~~~~~
../src/interperter.cpp: In function ‘AST_NODE* findFunctionByName(const std::string&)’:
../src/interperter.cpp:665:23: error: ‘root’ was not declared in this scope
  665 |     for (auto &stmt : root->SUB_STATEMENTS)
      |                       ^~~~
../src/parser.cpp: In member function ‘AST_NODE* Parser::parseResultStatement()’:
../src/parser.cpp:425:11: warning: infinite recursion detected [-Winfinite-recursion]
  425 | AST_NODE *Parser::parseResultStatement()
      |           ^~~~~~
../src/parser.cpp:445:50: note: recursive call
  445 |     resultStatement->CHILD = parseResultStatement();
      |                              ~~~~~~~~~~~~~~~~~~~~^~
